@@ -1,6 +1,8 @@
 lintian-brush (0.32) UNRELEASED; urgency=medium
 
   * Add flag to disable interaction with external services.
+  * Don't print error messages when unable to update non-machine-
+    readable copyright files.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Sep 2019 15:45:58 +0000
 
